# scnet-executorch

./: .gitignore  LICENSE  README.md  export_scnet_core.py  export_scnet_coreml_native.py  export_scnet_executorch.py  pyproject.toml
.github/workflows/: release.yml
prebuilt/: README.md
scripts/: build_manifest.py
